# CPP-Reflection

./: .auto-claude-security.json  .auto-claude-status  .claude_settings.json  .gitignore  FINAL_STATUS.txt  README.md  SUBTASK_6-1_SUMMARY.txt  SUBTASK_6-3_COMPLETE.md  TASK_COMPLETION_SUMMARY.md  VERIFICATION_SUMMARY.md  test_argparser.cpp
.claude/: settings.local.json
Docs/: Advanced-Topics.md  Architecture.md  BuildSystem.md  Examples.md  GettingStarted.md  Parser-Guide.md  README.md  Runtime-API.md
Examples/: CMakeLists.txt
Source/Common/Lib/: json11.cpp  json11.hpp
Source/Parser/: ASTNode.cpp  ASTNode.h  ASTTypes.h  ArgParser.h  CMakeLists.txt  CommandLineParser.cpp  CommandLineParser.h  CppParser.cpp  CppParser.h  Cursor.cpp  Cursor.h  CursorType.cpp  CursorType.h  Main.cpp  MetaDataManager.cpp  MetaUtils.cpp  MetaUtils.h  MetaUtils.hpp  Precompiled.h  ReflectionParser.cpp  ReflectionParser.h  StringUtils.cpp  StringUtils.h  TypeInfo.cpp  TypeInfo.h
Source/Parser/Impl/: ArgParser.hpp
Source/Parser/LanguageTypes/: Constructor.cpp  Function.cpp  Method.cpp
Source/Runtime/: CMakeLists.txt
